@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 09/18/2016
 .\"    Manual: \ \&
-.\"    Source: \ \& 1.0.3
+.\"    Source: \ \& 1.0.4-dev
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "09/18/2016" "\ \& 1\&.0\&.3\" "\ \&"
+.TH "MCABBER" "1" "09/18/2016" "\ \& 1\&.0\&.4\-dev\" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
