@@ -1,3 +1,9 @@
+mcabber (1.0.4-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.0.3)
 
  * Link with the tinfo library
